# gera

./: Cargo.toml  README.md  index.html  package.json
src/: App.tsx  api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: gcal.rs  lib.rs  main.rs  models.rs  oauth.rs  renderer.rs  repository.rs  storage.rs  tasks.rs  watcher.rs
src-tauri/src/commands/: events.rs  mod.rs  notes.rs  projects.rs  search.rs  tasks.rs  vault.rs
src/components/calendar/: CalendarHeader.test.tsx  CalendarHeader.tsx  CalendarView.tsx  EventCreateModal.tsx  EventEditModal.tsx
src/components/layout/: Inspector.test.tsx  Inspector.tsx  Sidebar.tsx
src/components/mobile/: MobileCalendarView.tsx  MobileInspectorCard.tsx  MobileNoteListItem.tsx  MobileNotesView.tsx  MobilePageHeader.tsx  MobileSettingsView.tsx  MobileTaskEditSheet.tsx  MobileTaskRow.tsx  MobileTasksView.tsx
src/components/settings/: SettingsModal.tsx
src/components/shared/: DateTimePicker.css  DateTimePicker.tsx
src/components/tasks/: TaskItem.tsx  TaskList.tsx  TaskModal.tsx  TasksView.tsx
src/editor/: NoteEditor.css  NoteEditor.tsx
src/hooks/: useSheetGesture.ts
src/layouts/: DesktopLayout.tsx  MobileLayout.tsx
src/styles/: components.css  layout.css  mobile.css  views.css
src/utils/: platform.ts
