[package]
name = "gera"
version.workspace = true
edition.workspace = true
description = "Gera – unified workspace (pure Rust Tauri 2)"
authors = ["you"]

[[bin]]
name = "gera"
path = "src/main.rs"

[lib]
name = "gera_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
comrak = { version = "0.29", default-features = false }
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
yoauth = { git = "https://github.com/petereon/yoauth-rs.git", tag = "0.3.0" }
dirs = "5"
once_cell = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSColor", "NSWindow"] }
objc2-foundation = "0.2"
